fix overflow in app-landing

--- a/frontend/src/app/landing/landing-hero/landing-hero.component.scss
+++ b/frontend/src/app/landing/landing-hero/landing-hero.component.scss
@@ -75,10 +75,10 @@
 }
 @media (max-width: 36em) {
   :host {
-    padding-bottom: 40%;
+    padding-bottom: 1%;
   }
   .container{
-    margin-top: 8% !important;
+    margin-top: 6% !important;
   }
   .hero-heading {
     font-size: 2.4rem;
